MTEST_DOCS = Author.txt                         \
	     Behaviour.txt                      \
	     CastemAccelerationPeriod.txt       \
	     CastemAccelerationTrigger.txt      \
	     Date.txt                           \
	     Description.txt                    \
	     Evolution.txt                      \
	     ExternalStateVariable.txt          \
	     ImposedStrain.txt                  \
	     ImposedStress.txt                  \
	     InternalStateVariable.txt          \
	     MaterialProperty.txt               \
	     MaximumNumberOfIterations.txt      \
	     MaximumNumberOfSubSteps.txt        \
             ModellingHypothesis.txt            \
	     Parameter.txt                      \
	     IntegerParameter.txt               \
	     UnsignedIntegerParameter.txt       \
	     OutputFile.txt                     \
	     OutputFilePrecision.txt            \
	     PredictionPolicy.txt               \
	     Real.txt                           \
	     RotationMatrix.txt                 \
	     StiffnessMatrixType.txt            \
	     StiffnessUpdatePolicy.txt          \
	     Strain.txt                         \
	     StrainEpsilon.txt                  \
	     Stress.txt                         \
	     StressEpsilon.txt                  \
	     Test.txt                           \
	     Times.txt                          \
             UseCastemAccelerationAlgorithm.txt

mtestdocdir   = $(docdir)
mtestdoc_DATA = $(MTEST_DOCS)

EXTRA_DIST=CMakeLists.txt                         \
	   Bibliographie.bib                      \
	   style.ist                              \
	   images/CastemAccelerationAlgorithm.eps \
	   images/CastemAccelerationAlgorithm.svg \
	   images/acceleration.eps		  \
	   images/acceleration.tplot 		  \
	   images/elasticity.mtest		  \
	   images/elasticity.tex 		  \
	   images/elasticity16.mtest		  \
	   images/elasticity16.tex 		  \
	   images/evolution.eps			  \
	   images/evolution.mtest 		  \
	   images/evolution.tex			  \
	   images/evolution.tplot 		  \
	   images/evolution.txt			  \
	   images/fixbb 			  \
	   images/norton-acc.txt		  \
	   images/norton-elas.txt 		  \
	   images/norton-tc.txt			  \
	   images/strainhardeningcreep.eps 	  \
	   images/strainhardeningcreep.mtest	  \
	   images/strainhardeningcreep.res 	  \
	   images/strainhardeningcreep.tex	  \
	   images/strainhardeningcreep.tplot	  \
	   images/tubeaxi.eps			  \
	   images/chaboche2-comp.eps		  \
	   images/chaboche2-mtest.tex		  \
	   images/chaboche2-mfront.tex		  \
	   images/chaboche2.eps			  \
	   images/tubeaxi.eps			  \
	   $(MTEST_DOCS)
