SUBDIRS=mtest ptest

MTEST_DOCS = Author.md                                    \
	     Behaviour.md                                 \
	     CastemAccelerationPeriod.md                  \
	     CastemAccelerationTrigger.md                 \
	     Date.md                                      \
	     Description.md                               \
	     Evolution.md                                 \
	     InternalStateVariable.md                     \
	     ExternalStateVariable.md                     \
	     MaterialProperty.md                          \
	     MaximumNumberOfIterations.md                 \
	     MaximumNumberOfSubSteps.md                   \
	     Parameter.md                                 \
	     IntegerParameter.md                          \
	     UnsignedIntegerParameter.md                  \
	     OutputFile.md                                \
	     OutputFilePrecision.md                       \
	     PredictionPolicy.md                          \
	     Real.md                                      \
	     StiffnessMatrixType.md                       \
	     StiffnessUpdatePolicy.md                     \
	     Times.md                                     \
             UseCastemAccelerationAlgorithm.md            \
	     AccelerationAlgorithm.md		          \
	     AccelerationAlgorithmParameter.md	          \
	     CompareToNumericalTangentOperator.md         \
	     NumericalTangentOperatorPerturbationValue.md \
	     OutOfBoundsPolicy.md

mtestdocdir   = $(docdir)/mtest
mtestdoc_DATA = $(MTEST_DOCS)

EXTRA_DIST=CMakeLists.txt                         \
	   style.ist                              \
	   images/CastemAccelerationAlgorithm.eps \
	   images/CastemAccelerationAlgorithm.svg \
	   images/acceleration.eps		  \
	   images/acceleration.tplot 		  \
	   images/elasticity.mtest		  \
	   images/elasticity.tex 		  \
	   images/elasticity16.mtest		  \
	   images/elasticity16.tex 		  \
	   images/evolution.eps			  \
	   images/evolution.mtest 		  \
	   images/evolution.tex			  \
	   images/evolution.tplot 		  \
	   images/evolution.txt			  \
	   images/fixbb 			  \
	   images/norton-acc.txt		  \
	   images/norton-elas.txt 		  \
	   images/norton-tc.txt			  \
	   images/strainhardeningcreep.eps 	  \
	   images/strainhardeningcreep.mtest	  \
	   images/strainhardeningcreep.res 	  \
	   images/strainhardeningcreep.tex	  \
	   images/strainhardeningcreep.tplot	  \
	   images/tubeaxi.eps			  \
	   images/chaboche2-comp.eps		  \
	   images/chaboche2-mtest.tex		  \
	   images/chaboche2-mfront.tex		  \
	   images/chaboche2.eps			  \
	   images/tubeaxi.eps			  \
	   images/zy4-1.eps			  \
	   images/zy4-2.eps			  \
	   images/tests-jenkins.eps               \
	   images/mtest-l3f.eps                   \
	   $(MTEST_DOCS)
