EXTRA_DIST=CMakeLists.txt                               \
	   images/UPuC_ThermalConductivity-cxx.tex      \
	   images/gpls-mfront-2.cxx		        \
	   images/NbZrC_CreepBehaviour-mfront.tex	\
	   images/resultat_norton_traction_n8.pstricks  \
	   images/UPuC_ThermalConductivity.cxx	        \
	   images/gpls-mfront-2.tex		        \
	   images/NbZrC_CreepBehaviour-mfront.cxx	\
	   images/UPuC_ThermalConductivity-mfront.cxx   \
	   images/UPuC_ThermalConductivity-mfront.tex   \
	   images/UPuC_ThermalConductivity-mfront2.tex  \
	   images/gpls-mfront.cxx			\
	   images/gpls-mfront.tex