SUBDIRS = mfront-user-meeting-2015 \
	  portable-behaviour       \
	  Materiaux2014            \
	  ClubCast3M2014           \
	  CodeAsterUserMeeting2015 \
	  mfront-finitestrain	   \
	  mfront-formation-tp	   \
          mfront-behaviours	   \
	  mfront-formation	   \
	  mfront-presentation	   \
	  mtest-presentation

EXTRA_DIST=CMakeLists.txt                                                   \
	   images/mfront.eps                                                \
	   images/mfront.pdf                                                \
	   images/mfront.svg                                                \
	   images/UPuC_ThermalConductivity-cxx.tex                          \
	   images/gpls-mfront-2.cxx		                            \
	   images/NbZrC_CreepBehaviour-mfront.tex	                    \
	   images/resultat_norton_traction_n8.pstricks                      \
	   images/UPuC_ThermalConductivity.cxx	                            \
	   images/gpls-mfront-2.tex		                            \
	   images/NbZrC_CreepBehaviour-mfront.cxx	                    \
	   images/UPuC_ThermalConductivity-mfront.cxx                       \
	   images/UPuC_ThermalConductivity-mfront.tex                       \
	   images/UPuC_ThermalConductivity-mfront2.tex                      \
	   images/castemtvergaard.tex			                    \
	   images/castemtvergaard.mtest			                    \
	   images/Tvergaard.tex				                    \
	   images/Tvergaard.mfront			                    \
	   images/castemtvergaard3.py			                    \
	   images/castemtvergaard-py.tex		                    \
	   images/UPuC_SolidSwellingModel.tex                               \
	   images/UPuC_SolidSwellingModel.mfront                            \
	   images/tvergaard.eps                                             \
	   images/gpls-mfront.cxx			                    \
	   images/gpls-mfront.tex                                           \
	   images/IncompressiblePlaneStressMooneyRivlinBehaviour.mfront     \
	   images/IncompressiblePlaneStressMooneyRivlinBehaviour-shear1.eps \
	   images/IncompressiblePlaneStressMooneyRivlinBehaviour.tex        \
	   images/IncompressiblePlaneStressMooneyRivlin-shear2.eps	    \
	   images/tutorielch12-img1.png					    \
	   images/172g.png						    \
	   images/Hayhurstiso.png					    \
	   images/norton-50s.png					    \
	   images/adao-chaboche-tout.png				    \
	   images/tutorielch12-img9.png					    \
	   images/Mazars_poutre.png					    \
	   images/MazarsCourbe.png					    \
	   images/dplan_mazars_mfront.png				    \
	   images/tutorielch12-img10.png				    \
	   images/traction-torsion-nrad.png				    \
	   images/tutorielch12-img12.png				    \
	   images/traction-torsion-eps.png				    \
	   images/Hayhurst.png						    \
	   images/tutorielch12-img18.png				    \
	   images/tutorielch12-img19.png				    \
	   images/Kel.png						    \
	   images/chaboche-cycles.png					    \
	   images/norton.png						    \
	   images/traction-torsion-sxy-sxx.png				    \
	   images/Kcoh.png						    \
	   images/hsnv125-sxx-exx.png					    \
	   images/traction-torsion-chargement.png			    \
	   images/Ktgt2.png						    \
	   images/172gv30pg.png						    \
	   images/tutorielch12-img20.png				    \
	   images/astk.png						    \
	   images/CourbeExpBurger.png					    \
	   images/tutorielch12-img2.pdf					    \
	   images/tutorielch12-img3.pdf					    \
	   images/hayhurst.png						    \
	   images/adao-chaboche-ref.png					    \
	   images/Ktgt.png						    \
	   mfront/interactionmatrix.mfront				    \
	   mfront/Chaboche_simple.mfront				    \
	   mfront/Inconel600_YoungModulus.mfront			    \
	   mfront/hayhurst.mfront					    \
	   mfront/meta-lema-ani.mfront					    \
	   mfront/ImplicitNorton.mfront					    \
	   mfront/norton_rk.mfront					    \
	   mfront/norton.mfront						    \
	   mfront/mfron03n.comm						    \
	   mfront/norton_spec.mfront					    \
	   mfront/sliding.mfront					    \
	   mfront/monocrystal.mfront					    \
	   mfront/Chaboche.mfront					    \
	   mfront/norton_jac.mfront					    \
	   mfront/mazars.mfront						    \
	   mfront/viscochab.mfront					    \
	   mfront/lemaitre.mfront					    \
	   mtest/norton-rk.mtest					    \
	   mtest/norton.res						    \
	   mtest/chaboche.mtest						    \
	   mtest/cyclique.mtest						    \
	   mtest/lemaitre.res						    \
	   mtest/norton.mtest						    \
	   mtest/viscochab.mtest					    \
	   mtest/lemaitre.mtest						    \
	   mtest/mfrontexec.py						    \
	   mtest/burger.mtest
