EXTRA_DIST = CMakeLists.txt	                       \
             texmf/CMakeLists.txt	               \
	     texmf/note_technique_2010.tex	       \
	     texmf/ceaeaDEC.eps                        \
	     texmf/Energie2010.eps		       \
	     texmf/bibtex/fr-insa.bst		       \
	     texmf/CEA_logo_quadri-sur-fond-rouge.eps  \
	     texmf/CEA_logo_quadri-sur-fond-rouge.svg  \
	     texmf/CEA_logo_quadri-sur-fond-rouge.pdf
